// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SideNavigationItem> Snapshots and structure should render correctly 1`] = `
<li
  className="lumx-side-navigation-item lumx-side-navigation-item--emphasis-high"
>
  <a
    className="lumx-side-navigation-item__link"
    tabIndex={0}
  >
    <span />
  </a>
</li>
`;

exports[`<SideNavigationItem> Snapshots and structure should render correctly with splitted actions 1`] = `
<li
  className="lumx-side-navigation-item lumx-side-navigation-item--emphasis-high"
>
  <a
    className="lumx-side-navigation-item__link"
    href="http://toto.com"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
  >
    <span />
  </a>
</li>
`;
